# Security-Camera

./: README.md
backend/: CMakeLists.txt
backend/app/: CMakeLists.txt
backend/app/include/: CommandServer.h  PeriodTimer.h  broadcastServer.h  cameraFeed.h  personDetector.h
backend/app/src/: CommandServer.cpp  PeriodTimer.cpp  broadcastServer.cpp  cameraFeed.cpp  main.cpp  personDetector.cpp
backend/hal/: CMakeLists.txt
backend/hal/include/: JoystickButton.h  Microservo.h  PanTiltKit.h  PeriodTimer.h  PlaySound.h  i2cHelpers.h  joystick.h  lightSensor.h  shutdown.h
backend/hal/src/: JoystickButton.cpp  Microservo.cpp  PanTiltKit.cpp  PlaySound.cpp  i2cHelpers.cpp  joystick.cpp  lightSensor.cpp  main_for_joystick.cpp
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/components/: ControlBar.tsx  Navbar.tsx  Snapshots.tsx
frontend/src/hooks/: useCameraSocket.tsx  useCommandSocket.tsx
